# pipeline-test

./: README.md  app.py  cdk.json
backend/: cdk_stack.py
backend/base_container/: Dockerfile  buildspec.yaml  requirements.txt
backend/base_container/ioda_bundle/: CMakeLists.txt
backend/base_container/jedi_stack_config/: choose_modules.sh  config_jtdstack.sh
frontend/: Dockerfile  app.ipynb  buildspec.yaml  cdk_stack.py  requirements.txt
pipeline/: buildspec_app.yaml  buildspec_services.yaml  buildspec_update.yaml  pipeline.py
pipeline_test/: pipeline_test_stack.py
tests/unit/: test_pipeline_test_stack.py
